<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/me_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="❤️"
        android:layout_marginStart="10dp"
        android:id="@+id/heart_text"/>
    <TextView
        android:id="@+id/you_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/you"
        android:textSize="22sp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:id="@+id/precentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:text="@string/precentage"/>


</LinearLayout>
