<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment"
    android:orientation="vertical"
    tools:context=".ResultLoveCalculator">


    <ImageView
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:id="@+id/girl_img"
        android:background="@drawable/girl"/>

    <TextView
        android:id="@+id/you_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/you"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/girl_img"
        tools:layout_editor_absoluteX="218dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="❤️"
        app:layout_constraintTop_toBottomOf="@id/you_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/me_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/me"
        app:layout_constraintTop_toBottomOf="@id/you_result"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"/>

    <TextView

        android:layout_width="wrap_content"
        android:textColor="@color/purple"
        android:id="@+id/heart"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/me_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="\u2661"
        android:textSize="200sp">

    </TextView>

    <TextView
        android:id="@+id/precentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="result"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/heart"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="180dp" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/try_again"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/heart_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:background="@drawable/heart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/history_btn"
        android:background="@drawable/history"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintTop_toBottomOf="@id/btn_try_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:id="@+id/score"
        android:textColor="@color/pink"/>

</androidx.constraintlayout.widget.ConstraintLayout>